--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,13 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  height: 0;
 }
 
-.App-logo {
-  height: 40vmin;
+html,
+body {
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+#root {
+  height: 100%;
 }
