--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,16 @@ button i {
   width: 60%;
   line-height: 0;
 }
+#imagePreview {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+#imagePreview img {
+  width: 100%;
+  height: 100%;
+}
 @media screen and (min-width: 780px) {
   button {
     font-family: 'Poppins', sans-serif;
@@ -92,7 +102,7 @@ button i {
   #shoutoutForm {
     width: 40%;
     position: fixed;
-    min-height: 50%;
+    min-height: 60%;
     background: #202122;
     z-index: 99999999999999999;
     left: 30%;
@@ -129,5 +139,18 @@ button i {
     line-height: 0;
     width: 30%;
     font-weight: 500;
+  }
+  #imagePreview {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    background: #191a1b;
+  }
+  #imagePreview img {
+    width: 90px;
+    height: 90px;
+    margin: 5px 0 0 5px;
+    border-radius: 50%;
   }
 }
